# vokey-transcribe

./: .env.example  .gitignore  .ntfyrc  AGENTS.md  CLAUDE.md  LXD_GUI.md  README.md  git-history.html  index.html  lxd-gui-setup.sh  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.gemini/: config.schema.yaml  config.yaml
.github/: release.yml
docs/: E2E-TESTING-RESEARCH.md  GITHUB-RELEASES-BEST-PRACTICES.md  ISSUES-171-172-plan.md  ISSUES-settings-ui-overhaul.md  ISSUES-sprint-7a.md  ISSUES-v1.0.0.md  SETTINGS-ARCHITECTURE-V2.md  SPRINT2-PLAN.md  SPRINT6-PLAN.md  SPRINT7-CONSOLIDATED-ARCHITECTURE.md  SPRINT7-PLAN.md  SPRINT7-WAVEFORM-PLAN.md  SPRINT7A-ISSUE71-PLAN.md  WORKLOG.md  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: admin_key.rs  effects.rs  kwin.rs  lib.rs  main.rs  metrics.rs  settings.rs  state_machine.rs
src-tauri/src/audio/: mod.rs  paths.rs  recorder.rs  vad.rs  waveform.rs
src-tauri/src/hotkey/: detector.rs  manager.rs  mod.rs
src-tauri/src/processing/: coding.rs  markdown.rs  mod.rs  pipeline.rs  prompt.rs
src-tauri/src/streaming/: audio_buffer.rs  audio_streamer.rs  mod.rs  protocol.rs  realtime_client.rs  transcript_aggregator.rs
src-tauri/src/transcription/: mod.rs  openai.rs
src-tauri/src/usage/: cache.rs  client.rs  mod.rs  types.rs
src-tauri/tests/: transcription_integration.rs
src-tauri/tests/fixtures/: README.md
(+79 files in other folders)
