[package]
name = "vokey-transcribe"
version = "0.1.0"
description = "Voice-to-text transcription via global hotkey"
authors = ["mcorrig4"]
license = "AGPL-3.0-only"
repository = "https://github.com/mcorrig4/vokey-transcribe"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"

# State machine
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }

# Global hotkey (Sprint 2)
evdev = { version = "0.12", features = ["tokio"] }
tokio-util = { version = "0.7" }

# Audio capture (Sprint 3)
cpal = "0.15"
hound = "3.5"

# Transcription + Clipboard (Sprint 4)
reqwest = { version = "0.12", features = ["json", "multipart"] }
arboard = "3"

# XDG paths
dirs = "5"
